# hiviewdfx_faultloggerd

./: .gitignore  2073.diff:Zone.Identifier  2076.diff:Zone.Identifier  AGENTS.md  BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  change_rustcdemangle_to_shared_library.patch  faultloggerd.gni  ohos.build
common/cppcrash_formatter/: BUILD.gn  cppcrash_formatter.cpp  cppcrash_formatter.h  cppcrash_info_collector.cpp  cppcrash_info_collector.h  cppcrash_utils.cpp  cppcrash_utils.h
common/dfxlog/: BUILD.gn  dfx_dmesg.cpp  dfx_log.cpp  dfx_log.h  dfx_log_define.h  dfx_log_public.h  musl_log.h
common/dfxutil/: BUILD.gn  dfx_signal.cpp  dfx_util.cpp  dfx_util.h  directory_ex.h  elapsed_time.cpp  elapsed_time.h  file_ex.cpp  file_ex.h  file_util.cpp  file_util.h  libdfx_util.map  proc_util.cpp  proc_util.h  smart_fd.h  stack_util.h  stack_utils.cpp  stack_utils.h  string_printf.h  string_util.h  string_view_util.h
common/log/: BUILD.gn  log_wrapper.c  log_wrapper.h
common/trace/: BUILD.gn  dfx_trace.cpp  dfx_trace_dlsym.cpp
example/: BUILD.gn  dfx_crash.h  dfx_test_func.h  dump_catcher_demo.cpp  dump_catcher_demo.h  unwinder_demo.cpp
frameworks/: BUILD.gn
frameworks/allocator/: BUILD.gn  dfx_allocator.c
frameworks/dwarf/: BUILD.gn
frameworks/exidx/: BUILD.gn  arm_exidx.cpp  exidx_instructions.txt
frameworks/include/: backtrace.h  backtrace_local_thread.h
frameworks/limited/: BUILD.gn  faultlog_client.c
frameworks/local/: BUILD.gn  backtrace_local_static.cpp  backtrace_local_thread.cpp
frameworks/localhandler/: BUILD.gn  dfx_crash_local_handler.cpp  dfx_signal_local_handler.cpp
frameworks/unwind/: BUILD.gn  arm_exidx.cpp  dfx_accessors.cpp  dfx_demangle.cpp  dfx_elf.cpp  dfx_elf_parse.cpp  dfx_instructions.cpp  dfx_loc.cpp  dfx_map.cpp  dfx_maps.cpp  dfx_memory.cpp  dfx_memory_dwarf.cpp  dfx_mmap.cpp  dfx_regs.cpp  dfx_regs_arm.cpp  dfx_regs_arm64.cpp  dfx_regs_x86_64.cpp  dfx_symbols.cpp  dfx_symbols_file.cpp  dfx_unwind_table.cpp  dwarf_cfa.txt  dwarf_cfa_instructions.cpp  dwarf_expression.cpp  dwarf_op.cpp  dwarf_parser.cpp  dwarf_section.cpp  dwarf_unwind_info.cpp
frameworks/unwinder/: BUILD.gn  arch_util.cpp  dfx_config.cpp  dfx_elf.cpp  dfx_frame_format.cpp  dfx_frame_formatter.cpp  dfx_maps.cpp  dfx_memory.cpp  dfx_memory_file.cpp  dfx_regs.cpp  dfx_regs_arm.cpp  dfx_regs_arm64.cpp  dfx_regs_riscv64.cpp  dfx_regs_x86_64.cpp  dfx_signal.cpp  dfx_symbols.cpp  dwarf_unwinder.cpp  dwarf_unwinder.h  fp_unwinder.cpp  fp_unwinder.h
services/: BUILD.gn  epoll_manager.cpp  epoll_manager.h  fault_common_util.cpp  fault_common_util.h  fault_coredump_service.cpp  fault_coredump_service.h  fault_kernel_snapshot.cpp  fault_kernel_snapshot.h  fault_logger_config.cpp  fault_logger_config.h  fault_logger_daemon.cpp  fault_logger_daemon.h  fault_logger_pipe.cpp  fault_logger_pipe.h  fault_logger_secure.cpp  fault_logger_secure.h  fault_logger_server.cpp  fault_logger_server.h  fault_logger_service.cpp  fault_logger_service.h  faultloggerd.map  kernel_snapshot_task.cpp  kernel_snapshot_task.h  main.cpp  temp_file_manager.cpp  temp_file_manager.h
services/config/: fault_coredump.json  faultlogger.conf  faultloggerd.cfg  faultloggerd.para  faultloggerd.para.dac  faultloggerd32.cfg  faultloggerd64.cfg  faultloggerd_config.json
services/coredump/: coredump_callback_service.cpp  coredump_callback_service.h  coredump_facade.cpp  coredump_facade.h  coredump_manager_service.cpp  coredump_manager_service.h  coredump_model.h  coredump_session_manager.cpp  coredump_session_manager.h  coredump_session_service.cpp  coredump_session_service.h  coredump_session_state.cpp  coredump_session_state.h  coredump_signal_service.cpp  coredump_signal_service.h  coredump_task_scheduler.cpp  coredump_task_scheduler.h
services/minidump/: minidump_manager_service.cpp  minidump_manager_service.h  pdump.h
services/snapshot/: BUILD.gn  i_kernel_snapshot_parser.h  i_kernel_snapshot_printer.h  i_kernel_snapshot_processor.h  i_kernel_snapshot_reporter.h  kernel_snapshot.map  kernel_snapshot_content_builder.cpp  kernel_snapshot_content_builder.h  kernel_snapshot_data.h  kernel_snapshot_kernel_frame.cpp  kernel_snapshot_kernel_frame.h  kernel_snapshot_manager.cpp  kernel_snapshot_manager.h  kernel_snapshot_parser.cpp  kernel_snapshot_parser.h  kernel_snapshot_printer.cpp  kernel_snapshot_printer.h  kernel_snapshot_processor_impl.cpp  kernel_snapshot_processor_impl.h  kernel_snapshot_reporter.cpp  kernel_snapshot_reporter.h  kernel_snapshot_trie.cpp  kernel_snapshot_trie.h  kernel_snapshot_util.cpp  kernel_snapshot_util.h
services/test/: BUILD.gn
test/: BUILD.gn
test/benchmarktest/: BUILD.gn  elf_benchmark.cpp  main_benchmark.cpp  unwind_local_benchmark.cpp  unwind_remote_benchmark.cpp
test/funchook/: BUILD.gn  dfx_exit_hook.c  dfx_exit_hook.h  dfx_func_hook_unittest.cpp  dfx_func_hook_unittest.h  dfx_hook_utils.c  dfx_hook_utils.h  dfx_signal_hook.c  dfx_signal_hook.h  ohos_bionic_test.xml  ohos_test.xml
test/fuzztest/: BUILD.gn  faultloggerd_fuzzer_test.cpp
test/moduletest/: BUILD.gn  faultloggerd_module_test.cpp  faultloggerd_module_test.h
test/performancetest/: BUILD.gn
test/resource/: BUILD.gn  config.json  faultloggerd.test.js  ohos_test.xml
test/systemtest/: BUILD.gn  dumpcatcher_system_test.cpp  faultloggerd_system_test.cpp  ohos_test.xml
test/unittest/: BUILD.gn
test/utils/: BUILD.gn  cppcrash_test_json.cpp  cppcrash_test_json.h  dfx_test_util.cpp  dfx_test_util.h  faultloggerd_test_server.cpp  faultloggerd_test_server.h
tools/crasher_cpp/: BUILD.gn  dfx_crasher.cpp  dfx_crasher.h
tools/dump_catcher/: BUILD.gn  dummy_dumpcatcher.cpp  dump_catcher.cpp  dump_catcher.h  main.cpp
tools/panic_maker/: BUILD.gn  main.rs
tools/process_dump/: BUILD.gn  cppcrash_reporter.cpp  cppcrash_reporter.h  decorative_dump_info.h  dfx_buffer_writer.cpp  dfx_buffer_writer.h  dfx_config.cpp  dfx_config.h  dfx_coredump_common.h  dfx_coredump_service.cpp  dfx_coredump_service.h  dfx_coredump_writer.cpp  dfx_coredump_writer.h  dfx_define.h  dfx_dump_request.cpp  dfx_dump_res.cpp  (+101 more)
(+746 files in other folders)
