# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/faultloggerd/faultloggerd.gni")
group("faultloggerd_targets") {
  if (defined(ohos_lite)) {
    deps = [
      "interfaces/innerkits/dump_catcher:libdfx_dumpcatcher",
      "interfaces/innerkits/faultloggerd_client:libfaultloggerd",
      "interfaces/innerkits/signal_handler:dfx_signalhandler",
      "services:faultloggerd",
      "tools/crasher_c:crasher_c",
      "tools/crasher_cpp:crasher_cpp",
      "tools/process_dump:processdump",
    ]
  } else {
    deps = [
      "interfaces/innerkits/backtrace:libbacktrace_local",
      "interfaces/innerkits/dump_catcher:libdfx_dumpcatcher",
      "interfaces/innerkits/faultloggerd_client:libfaultloggerd",
      "interfaces/innerkits/signal_handler:dfx_signalhandler",
      "interfaces/rust:libpanic_handler",
      "interfaces/rust:libstacktrace_rust",
      "interfaces/rust:rustc_demangle",
      "services:faultloggerd",
      "tools/crash_validator:crash_validator",
      "tools/dump_catcher:dumpcatcher",
      "tools/process_dump:processdump",
    ]
  }
}

group("faultloggerd_tests") {
  if (defined(ohos_lite)) {
    deps = [
      "test/moduletest:FaultloggerdModuleTest",
      "test/systemtest:test_faultloggerd",
      "test/unittest/process_dump:test_processdump",
      "test/unittest/services:test_service",
    ]
  } else {
    testonly = true
    deps = [
      "example:dumpcatcherdemo",
      "test:faultloggerd_funchook",
      "test:faultloggerd_fuzzertest",
      "test:faultloggerd_moduletest",
      "test:faultloggerd_performancetest",
      "test:faultloggerd_systemtest",
      "test:faultloggerd_unittest",
      "tools/crasher_c:crasher_c",
      "tools/crasher_cpp:crasher_cpp",
      "tools/panic_maker:panic_maker",
    ]
  }
}
