# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/faultloggerd/faultloggerd.gni")

cppcrash_formatter_sources = [
  "cppcrash_info_collector.cpp",
  "cppcrash_formatter.cpp",
  "cppcrash_utils.cpp",
]

if (defined(ohos_lite)) {
  config("cppcrash_formatter_src_config") {
    visibility = [ "*:*" ]
    include_dirs = [
      ".",
      "$hilog_lite_include_path",
      "$faultloggerd_common_path/dfxutil",
      "$faultloggerd_common_path/dfxlog",
      "$faultloggerd_interfaces_path/common",
      "$faultloggerd_interfaces_path/innerkits/unwinder/include",
    ]
  }

  source_set("cppcrash_formatter_src") {
    public_configs = [ ":cppcrash_formatter_src_config" ]
    sources = cppcrash_formatter_sources

    deps = [
      "$faultloggerd_path/common/dfxlog:dfx_hilog",
      "$hilog_lite_deps_path",
    ]

    external_deps = [ "bounds_checking_function:libsec_shared" ]
  }
  
} else {
 config("cppcrash_formatter_src_config") {
    visibility = [ ":*" ]
    include_dirs = [
      ".",
      "$faultloggerd_common_path/dfxutil",
      "$faultloggerd_common_path/dfxlog",
      "$faultloggerd_interfaces_path/common",
      "$faultloggerd_interfaces_path/innerkits/unwinder/include",
    ]
  }

  ohos_source_set("cppcrash_formatter_src") {
    sources = cppcrash_formatter_sources
    public_configs = [ ":cppcrash_formatter_src_config" ]
    external_deps = [
      "bounds_checking_function:libsec_shared",
      "cJSON:cjson",
      "hilog:libhilog",
    ]
    part_name = "faultloggerd"
    subsystem_name = "hiviewdfx"
  }

  ohos_source_set("cppcrash_formatter_src_cfi") {
    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
    }
    sources = cppcrash_formatter_sources
    public_configs = [ ":cppcrash_formatter_src_config" ]
    external_deps = [
      "bounds_checking_function:libsec_shared",
      "cJSON:cjson",
      "hilog:libhilog",
    ]
    part_name = "faultloggerd"
    subsystem_name = "hiviewdfx"
  }
}
