# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/faultloggerd/faultloggerd.gni")

if (defined(ohos_lite)) {
  config("dfx_log_config") {
    visibility = [ ":*" ]
    include_dirs = [
      ".",
      "$hilog_lite_include_path",
    ]
  }
  static_library("static_common_log") {
    sources = [ "dfx_log.cpp" ]
    public_configs = [ ":dfx_log_config" ]
    defines = [ "INIT_DMESG" ]

    deps = [ "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared" ]
  }

  static_library("static_hilog") {
    sources = [ "dfx_log.cpp" ]
    public_configs = [ ":dfx_log_config" ]

    deps = [ "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared" ]
  }

  static_library("static_no_print_log") {
    sources = [ "dfx_log.cpp" ]
    public_configs = [ ":dfx_log_config" ]
    defines = [ "DFX_NO_PRINT_LOG" ]

    deps = [ "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared" ]
  }
} else {
  config("dfx_log_config") {
    visibility = [ ":*" ]
    include_dirs = [ "." ]
  }
  ohos_static_library("static_common_log") {
    sources = [ "dfx_log.cpp" ]
    public_configs = [ ":dfx_log_config" ]
    defines = [ "INIT_DMESG" ]
    external_deps = [
      "hilog_native:libhilog_base",
      "utils_base:utils",
    ]
    part_name = "faultloggerd"
    subsystem_name = "hiviewdfx"
  }

  ohos_static_library("static_hilog_base") {
    sources = [ "dfx_log.cpp" ]
    public_configs = [ ":dfx_log_config" ]
    external_deps = [
      "hilog_native:libhilog_base",
      "utils_base:utils",
    ]
    part_name = "faultloggerd"
    subsystem_name = "hiviewdfx"
  }

  ohos_static_library("static_hilog") {
    sources = [ "dfx_log.cpp" ]
    public_configs = [ ":dfx_log_config" ]

    external_deps = [
      "hilog_native:libhilog_base",
      "utils_base:utils",
    ]
    part_name = "faultloggerd"
    subsystem_name = "hiviewdfx"
  }

  ohos_static_library("static_no_print_log") {
    sources = [ "dfx_log.cpp" ]
    public_configs = [ ":dfx_log_config" ]
    defines = [ "DFX_LOG_USE_HILOG_BASE" ]
    external_deps = [
      "hilog_native:libhilog_base",
      "utils_base:utils",
    ]
    part_name = "faultloggerd"
    subsystem_name = "hiviewdfx"
  }
}
