# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/faultloggerd/faultloggerd.gni")

dfx_log_sources = [ "dfx_log.cpp" ]
dfx_log_dmesg_sources = [
  "dfx_dmesg.cpp",
  "dfx_log.cpp",
]

if (defined(ohos_lite)) {
  config("dfx_log_config") {
    visibility = [ ":*" ]
    include_dirs = [
      ".",
      "$faultloggerd_interfaces_path/common",
      "$hilog_lite_include_path",
    ]
  }

  static_library("dfx_hilog") {
    sources = dfx_log_sources
    public_configs = [ ":dfx_log_config" ]
    deps = [ "$hilog_lite_deps_path" ]
  }

  static_library("dfx_hilog_dmesg") {
    sources = dfx_log_dmesg_sources
    public_configs = [ ":dfx_log_config" ]
    defines = [ "DFX_LOG_DMESG" ]
    deps = [ "$hilog_lite_deps_path" ]
  }

  static_library("dfx_hilog_base") {
    sources = dfx_log_sources
    public_configs = [ ":dfx_log_config" ]
    defines = [ "DFX_LOG_HILOG_BASE" ]
    deps = [ "$hilog_lite_deps_path" ]
  }

  ohos_static_library("dfx_hilog_base_dmesg") {
    sources = dfx_log_dmesg_sources
    public_configs = [ ":dfx_log_config" ]
    defines = [
      "DFX_LOG_HILOG_BASE",
      "DFX_LOG_DMESG",
    ]
    deps = [ "$hilog_lite_deps_path" ]
  }
} else {
  config("dfx_log_config") {
    visibility = [ ":*" ]
    include_dirs = [
      ".",
      "$faultloggerd_interfaces_path/common",
    ]
  }

  ohos_static_library("dfx_hilog") {
    sources = dfx_log_sources
    public_configs = [ ":dfx_log_config" ]
    external_deps = [
      "c_utils:utils",
      "hilog:libhilog",
    ]
    part_name = "faultloggerd"
    subsystem_name = "hiviewdfx"
  }

  ohos_static_library("dfx_hilog_dmesg") {
    sources = dfx_log_dmesg_sources
    public_configs = [ ":dfx_log_config" ]
    defines = [ "DFX_LOG_DMESG" ]
    external_deps = [
      "c_utils:utils",
      "hilog:libhilog",
    ]
    part_name = "faultloggerd"
    subsystem_name = "hiviewdfx"
  }

  ohos_static_library("dfx_hilog_base") {
    sources = dfx_log_sources
    public_configs = [ ":dfx_log_config" ]
    defines = [ "DFX_LOG_HILOG_BASE" ]
    external_deps = [
      "c_utils:utils",
      "hilog:libhilog_base",
    ]
    part_name = "faultloggerd"
    subsystem_name = "hiviewdfx"
  }

  ohos_static_library("dfx_hilog_base_dmesg") {
    sources = dfx_log_dmesg_sources
    public_configs = [ ":dfx_log_config" ]
    defines = [
      "DFX_LOG_HILOG_BASE",
      "DFX_LOG_DMESG",
    ]
    external_deps = [
      "c_utils:utils",
      "hilog:libhilog_base",
    ]
    part_name = "faultloggerd"
    subsystem_name = "hiviewdfx"
  }
}
